<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cookingrecipe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_more"
        android:name="com.example.cookingrecipe.ui.contact.ContactFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/nav_add_new"
        android:name="com.example.cookingrecipe.ui.addnew.AddNewFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add_new" />

    <fragment
        android:id="@+id/nav_shopping_list"
        android:name="com.example.cookingrecipe.ui.shopping.ShoppingListFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shopping_list" />
</navigation>