<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addnew.AddNewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backsecond"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addMainTitle"
            android:textColor="#000000"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageEditInAdd"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:srcCompat="@drawable/addimage"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addNameLable"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/addNameEdit"
                android:inputType="textPersonName"
                android:textColor="#000000" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/ingredientsLable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/addIngredientsLable"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/amountLable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/addAmountLable"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/ingredientEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/addIngredieantsEdit"
                    android:inputType="textMultiLine"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/amountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/addAmountEdit"
                    android:inputType="textMultiLine"
                    android:textColor="#000000" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/howToLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/addDirectionLable"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/howToEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/addDirectionHint"
            android:inputType="textMultiLine"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/noteLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/addNote"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/noteEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/addNote"
            android:inputType="textMultiLine"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/perpTimeLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/addPrapareTimeLable"
                android:textFontWeight="1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/prepTimeEdit"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/minimum"
                android:inputType="numberSigned"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/cookTileLable"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/addCookTimeLable"
                android:textFontWeight="1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cookTimeEdit"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/minimum"
                android:inputType="numberSigned"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calorieLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:text="@string/addCaloriesLable"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/caloriEdit"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:textColor="#000000" />
        </LinearLayout>

        <Button
            android:id="@+id/updatebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#8BEC38"
            android:text="@string/addButtonLable"
            android:textColor="#FFFFFF"
            app:rippleColor="#DD0D0D" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>