<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.update.UpdateRecipe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/update_titleLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Update Your Recipe"
            android:textColor="#000000"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/update_imageEditInAdd"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:srcCompat="@drawable/addimage"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update_nameLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addNameLable"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/update_nameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/addNameEdit"
                android:inputType="textPersonName"
                android:textColor="#000000" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/update_ingredientsLable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/addIngredientsLable"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/update_amountLable"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:text="@string/addAmountLable"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/update_ingredientEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/addIngredieantsEdit"
                    android:inputType="textMultiLine"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/update_amountEditText"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/addAmountEdit"
                    android:inputType="textMultiLine"
                    android:textColor="#000000" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/update_howToLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/addDirectionLable"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/update_howToEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/addDirectionHint"
            android:inputType="textMultiLine"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/update_noteLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/addNote"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/update_noteEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/addNote"
            android:inputType="textMultiLine"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update_perpTimeLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/addPrapareTimeLable"
                android:textFontWeight="1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/update_prepTimeEdit"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/minimum"
                android:inputType="numberSigned"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/update_cookTileLable"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/addCookTimeLable"
                android:textFontWeight="1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/update_cookTimeEdit"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/minimum"
                android:inputType="numberSigned"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update_calorieLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:text="@string/addCaloriesLable"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/update_caloriEdit"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:backgroundTint="#8BEC38"
                android:onClick="updateDataButton"
                android:text="UPDATE RECIPE"
                android:textColor="@color/black"
                app:rippleColor="#DD0D0D"
                android:padding="10dp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/update_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:backgroundTint="#3700B3"
                android:text="DISCARD"
                android:textColor="#FFFFFF"
                app:rippleColor="#DD0D0D"
                android:onClick="onCancelClick"
                android:padding="10dp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>